# auto-encoder-rust

./: .gitmodules  Cargo.toml  README.md
examples/: autoencoder.rs
src/: activations.rs  error.rs  initializations.rs  lib.rs  loss.rs  params.rs  plot.rs  utils.rs
src/data/: mod.rs  sin.rs
src/layer/: dense.rs  mod.rs
src/model/: mod.rs  sequential.rs
src/optimizer/: mod.rs  sgd.rs
