[package]
name = "auto-encoder-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayfire = { path = "arrayfire-rust" }

[[example]]
name = "helloworld_arrayfire"
path = "examples/helloworld_arrayfire.rs"

[[example]]
name = "autoencoder"
path = "examples/autoencoder.rs"
